# tools

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  signal_handler.go  tools.go  tools_test.go
kafka_consumer/: BUILD.bazel  kafka_consumer.go
peer/: BUILD.bazel  message.go  monitor.go  peer.go
sort/: BUILD.bazel  slice_sort.go  slice_sort_test.go
stats_server/: BUILD.bazel  server.go  server_test.go  stats_provider.go
store/: BUILD.bazel  store.go  store_test.go
telemetry_feeder/: BUILD.bazel  feeder.go  feeder_test.go
telemetry_feeder/grpc_feeder/: BUILD.bazel  grcp.go  grpc.go
telemetry_feeder/offline_feeder/: BUILD.bazel  offline.go
telemetry_feeder/proto/adjacency/: BUILD.bazel  Makefile  adjacency.pb.go  adjacency.proto
telemetry_feeder/proto/ios-xr-rib/: BUILD.bazel  Makefile
telemetry_feeder/proto/ios-xr-rib/backup_routes/backup_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/deleted_routes/deleted_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/destination_kw/dest_best_routes/dest_best_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/destination_kw/dest_next_hop_routes/dest_next_hop_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/destination_kw/dest_q_routes/dest_q_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/ipv6_routes/route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/nexthop_damping_histories/nexthop_damping_history/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/opaques/opaque/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/application/non_as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/application/non_as/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/bgp/as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/bgp/as/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/connected/l2vpn/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/connected/non_as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/connected/non_as/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/dagr/non_as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/dagr/non_as/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/eigrp/as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/eigrp/as/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/iid_local/non_as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/isis/as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/isis/as/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/local/lspv/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/local/lspv/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/local/non_as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/local/non_as/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/local/smiap/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/local/smiap/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/mobile/non_as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/mobile/non_as/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/ospf/as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/ospf/as/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/rip/non_as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/rip/non_as/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/rpl/as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/rpl/as/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/srv6_local/non_as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/static/non_as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/static/non_as/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/subscriber/non_as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/subscriber/non_as/protocol_routes/protocol_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/protocol/te_client/non_as/information/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/q_routes/q_route/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/ribtph_entries/ribtph_entry/: schema.pb.go  schema.proto
telemetry_feeder/proto/ios-xr-rib/routes/route/: schema.pb.go  schema.proto
telemetry_feeder/proto/mdtdialout/: BUILD.bazel  Makefile  mdt_grpc_dialout.pb.go  mdt_grpc_dialout.proto  mdt_grpc_dialout_grpc.pb.go
telemetry_feeder/proto/urib/: BUILD.bazel  Makefile  urib.pb.go  urib.proto
telemetry_feeder/proto/xr-rib_staging/: BUILD.bazel  Makefile  split_xr_proto.py  xr-ipv4-rib.proto  xr-rib.proto
telemetry_feeder/udp_feeder/: BUILD.bazel  udp_feeder.go  udp_feeder_test.go
xr_getproto/: BUILD.bazel  README.md  main.go
xr_getproto/proto/: BUILD.bazel  ems_getproto.pb.go  ems_getproto.proto  ems_getproto_grpc.go
(+33 files in other folders)
