module(name = "github_com_sbezverk_tools")

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_go_test_deep",
    "com_github_golang_glog",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
)
