load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "kafka_consumer",
    srcs = ["kafka_consumer.go"],
    importpath = "github.com/sbezverk/tools/kafka_consumer",
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_ibm_sarama//:go_default_library",
#        "@in_gopkg_yaml_v3//:go_default_library",
    ]
)
