load("@rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "store",
    srcs = ["store.go"],
    importpath = "github.com/sbezverk/tools/store",
)

go_test(
    name = "store_test",
    srcs = ["store_test.go"],
    embed = [":store"],
)
