load("@rules_go//go:def.bzl", "go_binary")

package(default_visibility = ["//visibility:public"])

go_binary(
    name = "xr_getproto",
    srcs = ["main.go"],
    importpath = "github.com/sbezverk/tools/xr_getproto",
    deps = [
        "//xr_getproto/proto:ems_getproto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
    ],
)
