load("@rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "grpc_feeder",
    srcs = ["grpc.go"],
    importpath = "github.com/sbezverk/tools/telemetry_feeder/grpc_feeder",
    deps = [
        "//telemetry_feeder:telemetry_feeder",
        "//telemetry_feeder/proto/mdtdialout:mdtdialout",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//keepalive:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
