load("@rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "offline_feeder",
    srcs = ["offline.go"],
    importpath = "github.com/sbezverk/tools/telemetry_feeder/offline_feeder",
    deps = [
        "//telemetry_feeder:telemetry_feeder",
        "@com_github_golang_glog//:go_default_library",
    ],
)
