load("@rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "udp_feeder",
    srcs = ["udp_feeder.go"],
    importpath = "github.com/sbezverk/tools/telemetry_feeder/udp_feeder",
    deps = [
        "//telemetry_feeder:telemetry_feeder",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//keepalive:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
