load("@rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "ems_getproto.proto",
])

go_library(
    name = "ems_getproto",
    srcs = [
        "ems_getproto.pb.go",
        "ems_getproto_grpc.go",
    ],
    importpath = "github.com/sbezverk/tools/xr_getproto/proto",
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
