load("@rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "Makefile",
    "adjacency.proto",
])

go_library(
    name = "adjacency",
    srcs = ["adjacency.pb.go"],
    importpath = "github.com/sbezverk/tools/telemetry_feeder/proto/adjacency",
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
